--- a/demo/index.html
+++ b/demo/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>Appvilla - Creative Landing Page HTML Template.</title>
+    <title>TotalGPT - Private AI Solutions.</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.svg" />
@@ -102,14 +102,13 @@
             <div class="row align-items-center">
                 <div class="col-lg-5 col-md-12 col-12">
                     <div class="hero-content">
-                        <h1 class="wow fadeInLeft" data-wow-delay=".4s">A powerful app for your business.</h1>
-                        <p class="wow fadeInLeft" data-wow-delay=".6s">From open source to pro services, Piqes helps you
-                            to build, deploy, test, and monitor apps.</p>
-                        <div class="button wow fadeInLeft" data-wow-delay=".8s">
+                        <h1 class="wow fadeInLeft" data-wow-delay=".4s">Private AI Solutions:</br>Empowering the Future of Schools and Businesses</h1>
+                        <p class="wow fadeInLeft" data-wow-delay=".6s">Revolutionary AI for schools and businesses streamline operations and foster innovation with TotalGPT.</p>
+<!--                        <div class="button wow fadeInLeft" data-wow-delay=".8s">
                             <a href="javascript:void(0)" class="btn"><i class="lni lni-apple"></i> App Store</a>
                             <a href="javascript:void(0)" class="btn btn-alt"><i class="lni lni-play-store"></i> Google
                                 Play</a>
-                        </div>
+                        </div>-->
                     </div>
                 </div>
                 <div class="col-lg-7 col-md-12 col-12">
